--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ config/local-config.json
 .vscode/
 resend_key.tex   
 config/railway-config.json
+
+test-keycloak.sh
+test-keycloak.go
+keycloak-start.sh
+.env.vars
+
+
+
