--- a/config/local-config.json
+++ b/config/local-config.json
@@ -25,8 +25,8 @@
         "server_url": "http://localhost:8080",
         "realm": "motogo",
         "client_id": "stifler",
-        "client_secret": "0SAFssjBSijdmP5GfYj1TegqT2DrX3Be",
-        "admin_user": "admin",
+        "client_secret": "e33Uj0AuH1fIpVpzcANrjRCe7AOl2dtW",
+        "admin_user": "motogo-admin",
         "admin_pass": "12345678"
       },
     "verification": {
